redirect root to /docs
